<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Планктониус</string>
    
    <string name="start_btn">Начать</string>
    <string name="choose_start">С чего начнем?</string>
    <string name="choose_start_more">Выберите начальное состояние компании</string>
    <string name="baken">Филиал Омега-софт</string>
    <string name="watch">Стартап Плинтер</string>
    <string name="toad">ОАО Жабожаб</string>
    
    <string name="contin">Продолжить</string>
    <string name="new_game">Новая игра</string>
    <string name="next">Далее</string>
    
    <string name="info_goal_head"> Правила игры </string>
    <string name="info_goal">Вы начинаете игру всего с несколькими сотрудниками. Каждые 4 часа компания эволюционирует, вы получаете прибыль и право уволить или нанять одного сотрудника.  Ваша задача - вырастить свою фирму, перейти на следующий уровень и заработать свой первый <b>миллион</b>! </string>
    <string name="info">Развитие идет по законам игры Life</string>
    
    <string name="inf1">Менее 2 коллег рядом - уныние и отчаяние. </string>
    <string name="inf2">Ровно три соседа - пора брать стажера!</string>
    <string name="inf3">Более трех - тесновато. Юнит исчезает. </string>
    
    <string name="info_units">Типы юнитов</string>
    
    <string name="info_red">Демотивированный (собирается увольняться). 5-10$ в день</string>
    <string name="info_green">Стажер-энтузиаст. 0-20$ в день</string>
    <string name="info_yellow">Рядовой сотрудник. Приносит 15-25$ в день</string>
    
    
    <string name="splash_string"> Вырасти корпорацию </string>
    <string name="splash_au"> (c) Евгений Баландин, 2010 </string>
</resources>
