<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:layout_width="fill_parent">



<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:textSize="15sp" android:textStyle="bold" android:layout_width="fill_parent" android:gravity="center" android:padding="5dip" android:background="#ff444444" android:text="@string/info_goal_head" android:layout_marginTop="7dip"></TextView><TextView android:id="@+id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_goal" android:padding="3dip" android:layout_margin="5dip"></TextView><TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:textSize="15sp" android:textStyle="bold" android:layout_marginTop="30dip" android:layout_width="fill_parent" android:gravity="center" android:padding="5dip" android:background="#ff444444" android:layout_marginBottom="10dip" android:text="@string/info_units"></TextView><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:layout_margin="6dip"><ImageView android:id="@+id/ImageView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/yellow_big"></ImageView><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:text="@string/info_yellow"></TextView>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:layout_margin="6dip"><ImageView android:id="@+id/ImageView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/green_big"></ImageView><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:text="@string/info_green"></TextView>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:layout_margin="6dip"><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/red_big"></ImageView><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:text="@string/info_red"></TextView>
</LinearLayout>





</LinearLayout>
