<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:id="@+id/ll" android:orientation="vertical" android:layout_centerInParent="true">
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/ll" android:layout_centerHorizontal="true" android:orientation="horizontal" android:layout_marginBottom="10dip" android:id="@+id/lay1" android:paddingRight="15dip" android:paddingBottom="5dip" android:paddingLeft="5dip" android:paddingTop="5dip">

<ru.jecklandin.life.GameField android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="#00ff00" android:minHeight="90dip" android:minWidth="90dip" android:id="@+id/start1"></ru.jecklandin.life.GameField>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/toad" android:textSize="19sp" android:layout_marginLeft="10dip" android:id="@+id/tw1"></TextView>
</LinearLayout><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="10dip" android:id="@+id/lay2" android:paddingRight="15dip" android:paddingLeft="5dip" android:paddingBottom="5dip" android:paddingTop="5dip">

<ru.jecklandin.life.GameField android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="#ff0000" android:minHeight="90dip" android:minWidth="90dip" android:id="@+id/start2"></ru.jecklandin.life.GameField>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/baken" android:textSize="19sp" android:layout_marginLeft="10dip" android:id="@+id/tw2"></TextView>
</LinearLayout>
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/lay3" android:paddingTop="5dip" android:paddingLeft="5dip" android:paddingBottom="5dip" android:paddingRight="15dip">

<ru.jecklandin.life.GameField android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="#ff00ff" android:minHeight="90dip" android:minWidth="90dip" android:id="@+id/start3"></ru.jecklandin.life.GameField>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/watch" android:textSize="19sp" android:layout_marginLeft="10dip" android:id="@+id/tw3"></TextView>
</LinearLayout>

</LinearLayout><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:textSize="20sp" android:text="@string/choose_start" android:id="@+id/choose_head"></TextView>
<Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:text="@string/next" android:minWidth="80dip" android:layout_margin="6dip"></Button>
<TextView android:id="@+id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/choose_head" android:layout_centerHorizontal="true" android:text="@string/choose_start_more"></TextView>
</RelativeLayout>
